--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   feather_icons: ^1.0.1
+  animated_splash_screen: ^1.1.0
 
 dev_dependencies:
   flutter_test:
