authentication using firebase auth :)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   feather_icons: ^1.0.1
   animated_splash_screen: ^1.1.0
+  firebase_core: "0.7.0"
+  firebase_auth: "^0.20.1"
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
