--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   firebase_core: "0.7.0"
   firebase_auth: "^0.20.1"
   http: ^0.12.2
+  flutter_secure_storage: ^4.2.0
+  cool_alert: ^1.1.0
+  modal_progress_hud: ^0.1.3
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
