--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
+    - assets/images/true.png
+    - assets/images/false.png
+    - assets/images/ok.png
 
   fonts:
     - family: Quicksand
