--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cool_alert: ^1.1.0
   modal_progress_hud: ^0.1.3
   sqflite: ^2.0.0+3
+  cached_network_image: ^2.5.1
 
 dev_dependencies:
   flutter_test:
