--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   sqflite: ^2.0.0+3
   cached_network_image: ^2.5.1
+  photo_view: ^0.11.1
 
 dev_dependencies:
   flutter_test:
