--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - run: flutter clean
       - run: flutter build ios --no-codesign
 
-  build_ios:
+  build_appbundle:
     name: Build Flutter [Android]
     needs: [flutter_test]
     runs-on: ubuntu-latest
