Added FOR CI Pass with Obfuscate builds

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 .history
 .svn/
 
+# Environment Variables
+.env
+/lib/environment_config.dart
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -44,3 +48,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
