--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   sqflite: ^2.0.0+3
   cached_network_image: ^2.5.1
   photo_view: ^0.11.1
+  environment_config: ^3.0.0
 
 dev_dependencies:
   flutter_test:
